// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package Debugger.SbListenerRpc;

import "Common.proto";

service SbListenerRpcService {
  rpc Create(CreateRequest) returns (CreateResponse) {
  }
  rpc WaitForEvent(WaitForEventRequest) returns (WaitForEventResponse) {
  }
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  Common.GrpcSbListener listener = 1;
}

message WaitForEventRequest {
  Common.GrpcSbListener listener = 1;
  uint32 num_seconds = 2;
}

message WaitForEventResponse {
  bool result = 1;
  Common.GrpcSbEvent event = 2;
}